# CS6219-Project

./: .clang-format  .gitignore  CMakeLists.txt  README.md  RUN.md  bootstrap.sh  edit_distance_sts.py  requirements.txt
dataset/: README.md  RESULTS.md  fetch_all.sh  test_all.sh
dataset/clustered-nanopore-reads-dataset/: fetch.sh  manifest.txt
dataset/dada2-16s-v4/: fetch.sh  manifest.txt
dataset/loman-zymo-r103/: fetch.sh  manifest.txt
dataset/loman-zymo-r10pcr/: fetch.sh  manifest.txt
dataset/sra-16s-v4/: fetch.sh  manifest.txt
src/: main.cxx  random_bit_generator.hxx  random_bit_generator_nosha.hxx  random_bit_generator_toeplitz.hxx  sequence.hxx  sequence_primer_error.hxx  sequence_real_data.hxx  sequence_sim.hxx  test_main.cxx  test_main_nosha.cxx  test_main_toeplitz.cxx
src/dataset/: common.hxx  fasta.hxx  fastq.hxx  nanopore_clusters.hxx
